--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: [noy90 testpage]
-description: [this is test page]
+title: noy90 testpage
+description: this is test page
