--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ description: this is test page
 color-scheme: auto
 
 sidebar:
-  - name: 作品一覧
+  - name: unity作品一覧
     icon: <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    link: ./index.md/#unity_game
+    link: https://noy90.github.io/#unity_game
