--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,5 @@ sidebar:
   - name: unity作品一覧
     icon: <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     link: https://noy90.github.io/#unity_game
+
+github: [metadata]
