--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,11 @@ title: noy90 homepage
 description: this is test page
 color-scheme: auto
 
+plugins:
+  - jekyll-sitemap
+  - jekyll-seo-tag
+  - jemoji
+
 sidebar:
   - name: GitHub
     icon: <i class="fa-brands fa-github"></i>
