--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: noy90 homepage
-description: this is test page
+description: This is test page.
 color-scheme: auto
 
 plugins:
